--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,21 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #ebeff1;
+    background-color: #1e293b;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #103780;
+  }
+  div[id*="headlessui-dialog-panel"]{
+    background-color: #0b1d42;
+  }
+  
+  
+}
