--- a/src/index.css
+++ b/src/index.css
@@ -61,14 +61,17 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #020304;
     background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
   }
+  div[id*="headlessui-dialog-panel"]{
+    background-color: #f3f4f6;
+  }
   button {
-    background-color: #f9f9f9;
+    background-color: #f8f7f9;
   }
 }
 
