--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,19 @@ button:focus-visible {
     color: #ebeff1;
   }
   
-  
+  button[id*='headlessui-listbox-button']{
+    background-color: #1b2c47;
+    border-color: rgb(46, 99, 139);
+  }
+
+  ul[id*='headlessui-listbox-options']{
+    background-color: #1b2c47;
+    
+  }
+  li[id*='headlessui-listbox-option']{
+    background-color: #102649;
+    color:#ebeff1
+    
+  }
   
 }
