--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,22 @@ button:focus-visible {
   button {
     background-color: #f8f7f9;
   }
+
+  ::-webkit-scrollbar {
+    width: 14px;
+  }
+  
+  /* Track */
+  div[id='qanda']::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(55 65 81);
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  div[id='qanda']::-webkit-scrollbar-thumb {
+    background: rgb(55 65 81); 
+    border-radius: 10px;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -112,7 +128,22 @@ button:focus-visible {
   li[id*='headlessui-listbox-option']{
     background-color: #1b2c47;
     color:#ebeff1
-    
+  }
+
+  ::-webkit-scrollbar {
+    width: 14px;
+  }
+  
+  /* Track */
+  div[id='qanda']::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(46, 99, 139);
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  div[id='qanda']::-webkit-scrollbar-thumb {
+    background: rgb(46, 99, 139); 
+    border-radius: 10px;
   }
   
 }
