--- a/src/index.css
+++ b/src/index.css
@@ -16,26 +16,22 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-
-  
 }
-.codex-editor{
+.codex-editor {
   padding-bottom: unset;
   overflow-y: scroll;
-  
 }
 
 .ce-block__content,
 .ce-toolbar__content {
   max-width: unset;
   max-height: unset;
-  width: 89% !important;
+  width: 92% !important;
+  padding-bottom: unset;
 }
 /* .ce-toolbar__plus{
   color: white;
 } */
-
-
 
 /* body {
   margin: 0;
@@ -75,7 +71,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  div[id*="headlessui-dialog-panel"]{
+  div[id*="headlessui-dialog-panel"] {
     background-color: #f3f4f6;
   }
   button {
@@ -85,20 +81,20 @@ button:focus-visible {
   ::-webkit-scrollbar {
     width: 14px;
   }
-  
+
   /* Track */
-  div[id='qanda']::-webkit-scrollbar-track {
+  div[id="qanda"]::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px rgb(55 65 81);
     border-radius: 10px;
   }
-   
+
   /* Handle */
-  div[id='qanda']::-webkit-scrollbar-thumb {
-    background: rgb(55 65 81); 
+  div[id="qanda"]::-webkit-scrollbar-thumb {
+    background: rgb(55 65 81);
     border-radius: 10px;
   }
 
-  #popoverElement{
+  #popoverElement {
     background-color: #ffffff;
     color: #ffffff;
   }
@@ -115,10 +111,11 @@ button:focus-visible {
   button {
     background-color: #103780;
   }
-  div[id*="headlessui-dialog-panel"]{
+  div[id*="headlessui-dialog-panel"] {
     background-color: #1b2c47;
   }
-  input[type], textarea {
+  input[type],
+  textarea {
     border-color: rgb(46, 99, 139);
     background-color: transparent;
     color: #ebeff1;
@@ -128,40 +125,38 @@ button:focus-visible {
     background-color: transparent;
     color: #ebeff1;
   }
-  
-  button[id*='headlessui-listbox-button']{
+
+  button[id*="headlessui-listbox-button"] {
     background-color: #1b2c47;
     border-color: rgb(46, 99, 139);
   }
 
-  ul[id*='headlessui-listbox-options']{
+  ul[id*="headlessui-listbox-options"] {
     background-color: #1b2c47;
-    
   }
-  li[id*='headlessui-listbox-option']{
+  li[id*="headlessui-listbox-option"] {
     background-color: #1b2c47;
-    color:#ebeff1
+    color: #ebeff1;
   }
 
   ::-webkit-scrollbar {
     width: 14px;
   }
-  
+
   /* Track */
-  div[id='qanda']::-webkit-scrollbar-track {
+  div[id="qanda"]::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px rgb(46, 99, 139);
     border-radius: 10px;
   }
-   
+
   /* Handle */
-  div[id='qanda']::-webkit-scrollbar-thumb {
-    background: rgb(46, 99, 139); 
+  div[id="qanda"]::-webkit-scrollbar-thumb {
+    background: rgb(46, 99, 139);
     border-radius: 10px;
   }
 
-  #popoverElement{
+  #popoverElement {
     background-color: #1b2c47;
     color: #1b2c47;
   }
-  
 }
